# clacks-qt

./: CMakeLists.txt  README.md  addfeeddialog.cpp  addfeeddialog.h  addfeeddialog.ui  clacks.cpp  clacks.h  clacks.ui  editdialog.cpp  editdialog.h  editdialog.ui  entry.cpp  entry.h  feed.cpp  feed.h  feedloader.cpp  feedloader.h  feedstore.cpp  feedstore.h  main.cpp  removedialog.cpp  removedialog.h  removedialog.ui
